# tc-update-engine

./: Makefile.am  configure.ac
include/: ab-updater.h  boot-control.h  bootloader-message.h  firmware-update.h  snor-update.h  tcc_snor_updater_dev.h  update-engine-def.h  update-engine.h  update-log.h
makelibrary/: Makefile.am
makeprocessor/: Makefile.am
src/: ab-updater.c  boot-control.c  firmware-update.c  main.c  update-engine.c
src/803x_snor/: snor-update.c
src/805x_snor/: snor-update.c
